trying to change project name is harder than i thought

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Clienttest26</string>
+    <string name="app_name">sic</string>
     <string name="title_home">Home</string>
     <string name="title_Channels">Channels</string>
     <string name="title_Discover">Discover</string>
